@@ -403,6 +403,7 @@
  * 20120724.3 (2.5.0-dev)  Add bal_persist, inherit to proxy_server_conf
  * 20120724.4 (2.5.0-dev)  Add dirwalk_stat hook.
  * 20120724.5 (2.5.0-dev)  Add ap_get_sload() and ap_get_loadavg().
+ * 20120724.6 (2.5.0-dev)  Add sticky_separator to proxy_balancer_shared struct.
  */
 
 #define MODULE_MAGIC_COOKIE 0x41503235UL /* "AP25" */
@@ -410,7 +411,7 @@
 #ifndef MODULE_MAGIC_NUMBER_MAJOR
 #define MODULE_MAGIC_NUMBER_MAJOR 20120724
 #endif
-#define MODULE_MAGIC_NUMBER_MINOR 5                   /* 0...n */
+#define MODULE_MAGIC_NUMBER_MINOR 6                   /* 0...n */
 
 /**
  * Determine if the server's current MODULE_MAGIC_NUMBER is at least a
